--- a/src/scss/1-helpers/_variables.scss
+++ b/src/scss/1-helpers/_variables.scss
@@ -25,4 +25,10 @@
   --side-space: 20px;
   --gap-between: 10px;
 
+  --z-nav: 900;
+  --z-nav-children: 910;
+  --z-logo:920;
+  --z-theme:920;
+  --z-ham:910;
+
 }
